otus_exercises/fourteen/work/charts/gateway/idenprovider-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-proxy
spec:
  rules:  
   - host: arch.homework  
     http:   
      paths:   
      - path: /login
        pathType: Prefix   
        backend:   
          service:   
            name: identprov
            port:   
              number: 80
      - path: /signin
        pathType: Prefix   
        backend:   
          service:   
            name: identprov
            port:   
              number: 80
      - path: /logout
        pathType: Prefix   
        backend:   
          service:   
            name: identprov
            port:   
              number: 80       
      - path: /register
        pathType: Prefix   
        backend:   
          service:   
            name: identprov
            port:   
              number: 80
      - path: /authenticate
        pathType: Prefix   
        backend:   
          service:   
            name: identprov
            port:   
              number: 80
