otus_exercises/fourteen/work/charts/gateway/userprofile-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userprofile
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://identprov.authprovider.svc.cluster.local:80/authenticate"
    nginx.ingress.kubernetes.io/auth-signin: "http://$host/signin"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-User,X-Email,X-First-Name,Authorization"
spec:
  rules:  
   - host: arch.homework  
     http:   
      paths:   
      - path: /userprofile
        pathType: Prefix
        backend:   
          service:   
            name: userprofile            
            port:   
              number: 80
